--- a/Moviekus/Moviekus/Views/Movies/NewMoviePage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/NewMoviePage.xaml
@@ -8,8 +8,8 @@
              Title="Neuer Film">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
-        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
+        <ToolbarItem Text="Löschen" IconImageSource="delete.png" Command="{Binding DeleteCommand}" />
+        <ToolbarItem Text="Speichern" IconImageSource="save.png" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
