--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -9,7 +9,8 @@
              x:Name="BrowseMoviesPage">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Neu" Clicked="AddItem_Clicked" />
+        <ToolbarItem Text="Neu" Clicked="AddItem_Clicked" IconImageSource="add.png"/>
+
     </ContentPage.ToolbarItems>
 
     <StackLayout>
