Icons für Navigationsmenü und App hinzugefügt

--- a/Moviekus/Moviekus/Views/MenuPage.xaml
+++ b/Moviekus/Moviekus/Views/MenuPage.xaml
@@ -14,7 +14,21 @@
                 <DataTemplate>
                     <ViewCell>
                         <Grid Padding="10">
-                            <Label Text="{Binding Title}" d:Text="{Binding .}" FontSize="20"/>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="30" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Image 
+                                Source="{Binding ImageSource}"
+                                HeightRequest="5"
+                                WidthRequest="5"
+                                Grid.Column="0"
+                                />
+                            <Label 
+                                Text="{Binding Title}" 
+                                d:Text="{Binding .}" 
+                                Grid.Column="1"
+                                FontSize="20"/>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
