--- a/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Moviekus.Views.Movies.NewMoviePage"
+             x:Class="Moviekus.Views.Movies.MovieEditPage"
              Title="Neuer Film">
     
     <ContentPage.ToolbarItems>
