--- a/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
@@ -16,6 +16,11 @@
         <StackLayout Spacing="20" Padding="15">
             <Label Text="Titel" FontSize="Medium" />
             <Entry Text="{Binding Movie.Title}" d:Text="Name des Films" FontSize="Small" />
+            <Label Text="Genres" />
+            <StackLayout Orientation="Horizontal" Padding="5">
+                <Label Text="{Binding Genres}" FontSize="Medium"/>
+                <Button Text="..." WidthRequest="40" HorizontalOptions="EndAndExpand" Command="{Binding GenreEditButtonClicked}"></Button>
+            </StackLayout>
             <Label Text="Verfügbar bei" />
             <Picker Title="-- Anbieter des Films wählen --"
                     FontSize="Small"
