--- a/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             Title="Genre bearbeiten"
+             Title="{Binding Title}"
              x:Class="Moviekus.Views.Genres.GenreDetailPage">
 
     <ContentPage.ToolbarItems>
