--- a/Moviekus/Moviekus/Views/Sources/SourceDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Sources/SourceDetailPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             Title="Quelle bearbeiten"
+             Title="{Binding Title}"
              x:Class="Moviekus.Views.Sources.SourceDetailPage">
 
     <ContentPage.ToolbarItems>
