Vorbereitung zum Aufruf von MovieDb, View zur Filmauswahl bei mehreren Treffern

--- a/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
@@ -9,6 +9,7 @@
              Title="{Binding Title}">
     
     <ContentPage.ToolbarItems>
+        <ToolbarItem Text="MovieDb" IconImageSource="moviedb.png" Command="{Binding MovieDbCommand}" />
         <ToolbarItem Text="Speichern" IconImageSource="save.png" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
     
