--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:Moviekus.ViewModels"
              mc:Ignorable="d"
              x:Class="Moviekus.Views.Movies.MoviesPage"
              Title="{Binding Title}"
@@ -12,6 +13,12 @@
         <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="add.png"/>
 
     </ContentPage.ToolbarItems>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:ByteToImageFieldConverter x:Key="ByteArrayToImage" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout>
         <ListView x:Name="MoviesListView"
@@ -26,10 +33,19 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Padding="10">
-                            <Label Text="{Binding Movie.Title}" 
-                                FontSize="16" />
-                        </StackLayout>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="120"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image x:Name="coverImage" Source="{Binding Movie.Cover, Converter={StaticResource ByteArrayToImage}}" VerticalOptions="Center" HorizontalOptions="Start" WidthRequest="120" HeightRequest="200" Grid.Column="0"/>
+                            <StackLayout Grid.Column="1">
+                                <Label Text="{Binding Movie.Title}" TextColor="#3d5f8a" FontAttributes="Bold" FontSize="Title"/>
+                                <Label Text="{Binding SubTitle}" TextColor="#7e90a8" FontAttributes="Italic" FontSize="Subtitle"/>
+                                
+                                <Label Text="{Binding Movie.Description}" FontSize="Micro"/>
+                            </StackLayout>
+                        </Grid>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
