--- a/Moviekus/Moviekus/Views/Filter/FilterEntryDateCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryDateCellTemplate.xaml
@@ -6,12 +6,12 @@
              mc:Ignorable="d"
              x:Class="Moviekus.Views.Filter.FilterEntryDateCellTemplate">
   <ViewCell.View>
-      <StackLayout>
+        <StackLayout Padding="5">
             <Label Text="{Binding FilterEntryLabel}" />
-            <StackLayout Orientation="Vertical">
-                <Label Text="Vom"  Padding="5"/>
+            <StackLayout Orientation="Vertical" >
+                <Label Text="Vom"/>
                 <DatePicker Date="{Binding DateFrom}" Format="D" HorizontalOptions="Start"/>
-                <Label Text="bis"  Padding="5"/>
+                <Label Text="bis"/>
                 <DatePicker Date="{Binding DateTo}" Format="D" HorizontalOptions="Start"/>
             </StackLayout>
         </StackLayout>
