--- a/Moviekus/Moviekus/Views/Filter/FilterEntryEntryCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryEntryCellTemplate.xaml
@@ -7,7 +7,7 @@
              x:Class="Moviekus.Views.Filter.FilterEntryEntryCellTemplate">
   <ViewCell.View>
       <StackLayout Padding="5">
-            <Label Text="{Binding FilterEntryLabel}" />
+            <Label Text="{Binding FilterEntry.FilterEntryType.Name}" />
             <Entry Text="{Binding FilterEntry.ValueFrom}" />
         </StackLayout>
   </ViewCell.View>
